Fix: Renderizado de fÃ³rmulas LaTeX en componentes del alumno y correcciÃ³n de errores de acentos en InlineMath

--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Permisos para fullscreen (necesario para iframes con allowFullScreen) -->
     <meta http-equiv="Permissions-Policy" content="fullscreen=(self)" />
-    <title>Vite + React</title>
+    
+    <!-- Favicon optimizado para todos los navegadores -->
+    <link rel="icon" href="/public/guardianes.ico" type="image/x-icon">
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg">
+    <link rel="shortcut icon" href="/public/guardianes.ico">
+    
+    <title>MQerKAcademy</title>
   </head>
   <body>
     <div id="root"></div>
-  <div id="modal-root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
