Actualizaciones en la pagina

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Permisos para fullscreen (necesario para iframes con allowFullScreen) -->
     <meta http-equiv="Permissions-Policy" content="fullscreen=(self)" />
-    <title>Vite + React</title>
+    <title>MQerKAcademy</title>
   </head>
   <body>
     <div id="root"></div>
