fix: adjust calendar cell heights and simulation layout for responsive screens

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
     <!-- Permisos para fullscreen (necesario para iframes con allowFullScreen) -->
     <meta http-equiv="Permissions-Policy" content="fullscreen=(self)" />
     
+    <!-- Google Fonts - Silo para notificaciones financieras -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
     <!-- Favicon optimizado para todos los navegadores -->
     <link rel="icon" href="/public/guardianes.ico" type="image/x-icon">
     <link rel="icon" type="image/svg+xml" href="/public/favicon.svg">
